--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,20 @@
 version: '3.8'
 services:
   movies:
-    image: hpakala53/paytmmovies:latest
+    image: mohammedmeeraj/paytmmovies:latest
     ports:
       - "81:80"
     deploy:
       replicas: 3
   train:
-    image: hpakala53/paytmtrain:latest
+    image: mohammedmeeraj/paytmtrain:latest
     ports:
       - "82:80"
     deploy:
       replicas: 3
   dth:
-    image: hpakala53/paytmdth:latest
+    image: mohammedmeeraj/paytmrecharge:latest
     ports:
       - "83:80"
-    deploy:
-      replicas: 3
-  recharge:
-    image: hpakala53/paytmrecharge:latest
-    ports:
-      - "84:80"
     deploy:
       replicas: 3
